--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build production
-        run: npm build
+        run: npm run build
       - name: Deploy
         run: echo "Deploying ..."
